--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: 大雁小鱼的博客
 SEOTitle: 大雁小鱼的博客 | BY 747121521
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: 747121521@qq.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "大雁小鱼"
 url: "http://luyuanwan.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
@@ -19,11 +19,11 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# zhihu_username:     qiubaiying
+github_username:    luyuanwan
+# facebook_username:  baiying.qiu.7
+# jianshu_username:   e71990ada2fd
+# twitter_username:   qiubaiying
 
 
 
